# minecraft-log-resolver

./: .gitignore  HANDOFF.md  README.md  index.html  minecraft-log-observatory.config.json  minecraft-log-observatory.local.example.json  package-lock.json  package.json  start.bat  stop.bat
custom-rules/: README.md
custom-rules/examples/: local-server.example.json
docs/: api.md  backend-runbook.md  backend-status.md  backend-todo.md  custom-rules.md  frontend-api-contract.md  openapi.json  performance.md  report-schema-v1.md  store.md
scripts/: analyze.mjs  api.mjs  audit-labels.mjs  audit-status.mjs  build-local-desktop.mjs  build-tauri-frontend.mjs  build-tauri-portable.mjs  build-windows-exe.mjs  chat-events.mjs  chat-rounds.mjs  chat-templates.mjs  doctor.mjs  export-activity-review.mjs  export-boundary-audit.mjs  export-labeling-candidates.mjs  export-owner-alias-candidates.mjs  export-result-review.mjs  export-server-unknowns.mjs  export-store.mjs  export-unknown-audit.mjs  export-unknown-by-end-samples.mjs  export-unknown-by-hint-samples.mjs  export-unknown-results.mjs  export-unknown-rounds.mjs  extract-chat-lines.mjs  label-file-io.mjs  launcher-windows.cjs  performance-baseline.mjs  refresh-local.mjs  release-check.mjs  release-notes.mjs  report.mjs  result-candidates.mjs  rules-audit-workflow.mjs  rules-doctor.mjs  rules-draft-from-labels.mjs  rules-dry-run.mjs  rules-quality-baseline.mjs  serve.mjs  tauri-api-bridge.mjs  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: reportApi.mjs
(+46 files in other folders)
