[package]
name = "app"
version = "0.1.0"
description = "Local offline Minecraft log analytics desktop app"
authors = ["A1mAssist"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
encoding_rs = "0.8"
flate2 = "1"
regex = "1"
rfd = "0.15"
